--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   geolocator: ^14.0.2
   webview_flutter: ^4.13.0
   flutter_html: ^3.0.0
+  skeletonizer: ^2.1.2
 
 dev_dependencies:
   flutter_test:
